# landt

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  create_sample_excel.py  docker-compose.yml  render.yaml
.github/workflows/: deploy.yml
backend/: Dockerfile  build.sh  requirements.txt  test_api.html  test_data_structure.py  test_excel_read.py  test_formula.py  test_sheets_data.json  verify_all_files.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  anomaly_detector.py  cost_driver_analyzer.py  dag_builder.py  parser.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  analysis_service.py
backend/app/utils/: __init__.py  config.py  logger.py
backend/rust_reader/: Cargo.toml  pyproject.toml
backend/rust_reader/src/: lib.rs
backend/test_files/: complex_dependencies.xlsx  cost_driver_model.xlsx  multi_sheet_references.xlsx  simple_budget.xlsx
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AnomalyList.css  AnomalyList.jsx  ComplexityChart.jsx  CostDriverList.jsx  FileUpload.css  FileUpload.jsx  FormulaExplorer.css  FormulaExplorer.jsx  FormulaOptimization.css  FormulaOptimization.jsx  GraphViewer.css  GraphViewer.jsx  LandingFeatures.css  MetricsDashboard.css  MetricsDashboard.jsx
frontend/src/services/: api.js
frontend/src/store/: analysisStore.js
